# cmake_project

./: CMakeLists.txt  Config.cmake  README.md  commands.py  main.cpp
.github/workflows/: c-cpp.yml
Arrays/: Array_Basics.cpp  CMakeLists.txt  String_Assignment.cpp  String_Assignment.h  String_Basics.cpp
Functions/: CMakeLists.txt  Functions_Basics.cpp
Pointers/: CMakeLists.txt  Pointer_Basics.cpp  Pointers_Quiz.py
